--- a/public/index.html
+++ b/public/index.html
@@ -14,29 +14,11 @@
     <header class="Header"
             id="header">
     </header>
-    <section id="content">
+    <section id="content"
+             class="Content">
       <div class="Loading"> </div>
     </section>
   </main>
-  <!--
-  '<main class="main-content">' +
-    '<section class="app-row">' +
-    '<div class="app-grid--inline">' +
-    '<h1 class="app-list--title">Apps by Host</h1>' +
-    '<p class="app-list--description">for user {{user}}</p>' +
-    '</div>' +
-    '<div class="app-grid--inline">' +
-    '<input class="app-checkbox--as-list" data-event="onChange" type="checkbox" id="asList" name="asList">' +
-    '<label for="asList" class="apps-as-list--toggle">' +
-    'Show as list' +
-    '</label>' +
-    '</div>' +
-    '</section>' +
-    '<section class="app-row" data-change>' +
-    '{{hostListViews}}' +
-    '</section>' +
-    '</main>', -->
-
 </body>
 
 </html>
